--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 		<p>htmlgit</p>
 		<p>htmlgit</p>
 		<span>ppppppppppppppp</span>
+		<i>iiiiiiiiiiiiiiiiiiiii</i>
+		<b>bbbbbbbbbbbbbbbbbbbbb</b>
 	</body>
 </html>
