--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<span>ppppppppppppppp</span>
 		<i>iiiiiiiiiiiiiiiiiiiii</i>
 		<b>bbbbbbbbbbbbbbbbbbbbb</b>
+		<strong>obobobobob</strong>
 	</body>
 </html>
