--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style>
+			i{font-size:20px;color:red}
+		</style>
 	</head>
 	<body>
 		<p>htmlgit</p>
