--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style type="text/css">
+			p{
+				background: red;
+			}
+		</style>
 	</head>
 	<body>
 		<p>htmlgit</p>
